# digiham

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  cli.hpp  cmake-builder-deps  dc_block.c  digitalvoice_filter.c  dmr_bitmappings.h  dmr_decoder.c  dmr_quadratic_residue.c  dmr_quadratic_residue_syndrome_generator.c  dumphex.c  fsk_demodulator.c  gfsk_demodulator.c  mbe_synthesizer.c  pocsag_decoder.c  rrc_filter.c  setup.py  version.h  ysf_bitmappings.h  ysf_decoder.c  ysf_fich.c  ysf_golay.c  ysf_golay.h  ysf_trellis.c  ysf_trellis.h  ysf_whitening.c
debian/: changelog  control  copyright  libdigiham-dev.install  libdigiham0.install  python3-digiham.install  rules
digiham/: modules.pyi
dmr/: bitmappings.h  bptc_196_96.c  bptc_196_96.h  golay_20_8.c  golay_20_8_syndrome_generator.c  hamming_15_11.c  hamming_15_11.h  hamming_15_11_syndrome_generator.c  hamming_16_11.c  hamming_16_11_syndrome_generator.c  hamming_7_4.c  hamming_7_4.h  quadratic_residue.c  quadratic_residue.h  quadratic_residue_syndrome_generator.c
examples/: dmr-decoder.sh  dstar-decoder.sh  nxdn48-decoder.sh  pocsac-decoder.sh  pocsag-decoder.sh  ysf-decoder.sh
include/: ambe_modes.hpp  dc_block.hpp  decoder.hpp  digitalvoice_filter.hpp  dmr_decoder.hpp  dstar_decoder.hpp  fsk_demodulator.hpp  gfsk_demodulator.hpp  mbe_synthesizer.hpp  meta.hpp  nxdn_decoder.hpp  pocsag_decoder.hpp  rrc_filter.hpp  version.hpp  ysf_decoder.hpp
pocsag/: bch_31_21.c  bch_31_21_syndrome_generator.c
python/: setup.py
python/digiham/: ambe.py  modules.pyi
python/src/: dcblock.cpp  decoder.cpp  decoder.hpp  digitalvoicefilter.cpp  digitalvoicefilter.hpp  dmrdecoder.cpp  dmrdecoder.hpp  dstardecoder.cpp  dstardecoder.hpp  fskdemodulator.cpp  fskdemodulator.hpp  gfskdemodulator.cpp  gfskdemodulator.hpp  mbesynthesizer.cpp  mbesynthesizer.hpp  modules.cpp  modules.hpp  narrowrrcfilter.cpp  narrowrrcfilter.hpp  nxdndecoder.cpp  nxdndecoder.hpp  pickleserializer.cpp  pickleserializer.hpp  picklewriter.cpp  picklewriter.hpp  pocsagdecoder.cpp  pocsagdecoder.hpp  types.cpp  types.hpp  widerrcfilter.cpp  widerrcfilter.hpp  ysfdecoder.cpp  ysfdecoder.hpp
src/: CMakeLists.txt  Config.cmake.in
src/dc_block/: CMakeLists.txt  dc_block.c  dc_block.cpp  dc_block_cli.cpp  dc_block_cli.hpp
src/digitalvoice_filter/: CMakeLists.txt  digitalvoice_filter.c  digitalvoice_filter.cpp  digitalvoice_filter_cli.cpp  digitalvoice_filter_cli.hpp
src/dmr_decoder/: CMakeLists.txt  cach.cpp  cach.hpp  dmr_cli.cpp  dmr_cli.hpp  dmr_decoder.c  dmr_decoder.cpp  dmr_meta.cpp  dmr_meta.hpp  dmr_phase.cpp  dmr_phase.hpp  emb.cpp  emb.hpp  embedded.cpp  embedded.hpp  golay_20_8.h  gps.cpp  gps.hpp  hamming_13_9.c  hamming_13_9.h  hamming_13_9_syndrome_generator.c  hamming_16_11.h  hamming_7_4_syndrome_generator.c  lc.cpp  lc.hpp  quadratic_residue.c  slottype.cpp  slottype.hpp  tact.cpp  tact.hpp  talkeralias.cpp  talkeralias.hpp
src/dstar_decoder/: CMakeLists.txt  crc.cpp  crc.hpp  dstar_cli.cpp  dstar_cli.hpp  dstar_decoder.cpp  dstar_decoder.hpp  dstar_meta.cpp  dstar_meta.hpp  dstar_phase.cpp  dstar_phase.hpp  header.cpp  header.hpp  meta.cpp  meta.hpp  phase.cpp  phase.hpp  scrambler.cpp  scrambler.hpp
src/fsk_demodulator/: CMakeLists.txt  fsk_demodulator.c  fsk_demodulator.cpp  fsk_demodulator_cli.cpp  fsk_demodulator_cli.hpp
src/gfsk_demodulator/: CMakeLists.txt  gfsk_demodulator.c  gfsk_demodulator.cpp  gfsk_demodulator_cli.cpp  gfsk_demodulator_cli.hpp
src/lib/: CMakeLists.txt  charset.cpp  charset.hpp  cli.cpp  cli.hpp  coordinate.cpp  coordinate.hpp  decoder.cpp  decoder.hpp  dumphex.h  hamming_distance.c  hamming_distance.h  meta.cpp  meta.hpp  phase.cpp  phase.hpp  ringbuffer.cpp  ringbuffer.hpp  version.c  version.cpp  version.h
src/mbe_synthesizer/: CMakeLists.txt  ambe_modes.cpp  cli.cpp  cli.hpp  mbe_synthesizer.cpp  mbe_synthesizer_cli.cpp
src/nxdn_decoder/: CMakeLists.txt  facch1.cpp  facch1.hpp  lich.cpp  lich.hpp  nxdn_cli.cpp  nxdn_cli.hpp  nxdn_decoder.cpp  nxdn_decoder.hpp  nxdn_meta.cpp  nxdn_meta.hpp  nxdn_phase.cpp  nxdn_phase.hpp  sacch.cpp  sacch.hpp  scrambler.cpp  scrambler.hpp  trellis.cpp  trellis.hpp  types.hpp
src/pocsag_decoder/: CMakeLists.txt  bch_31_21.h  bch_31_21_syndrome_generator.c  codeword.cpp  codeword.hpp  message.cpp  message.hpp  pocsag_cli.cpp  pocsag_cli.hpp  pocsag_decoder.c  pocsag_decoder.cpp  pocsag_phase.cpp  pocsag_phase.hpp
src/python/: dcblock.hpp  dstardecoder.hpp  modules.cpp
src/rrc_filter/: CMakeLists.txt  rrc_filter.c  rrc_filter.cpp  rrc_filter_cli.cpp  rrc_filter_cli.hpp
src/ysf_decoder/: CMakeLists.txt  commands.h  crc16.c  crc16.h  crc16_test.c  data.cpp  data.hpp  fich.cpp  fich.hpp  gps.c  gps.cpp  gps.h  gps.hpp  radio_types.h  trellis.c  trellis.h  whitening.c  whitening.h  ysf_cli.cpp  ysf_cli.hpp  ysf_decoder.c  ysf_decoder.cpp  ysf_meta.cpp  ysf_meta.hpp  ysf_phase.cpp  ysf_phase.hpp
ysf/: bitmappings.h  crc16.c  crc16.h  fich.c  fich.h  golay_24_12.c  golay_24_12.h  golay_24_12_syndrome_generator.c  gps.c  gps.h  radio_types.c  radio_types.h
