cmake_minimum_required (VERSION 3.0)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

project (digiham VERSION 0.5.0)
add_definitions(-DVERSION="${PROJECT_VERSION}-dev")

enable_language(CXX)
set(CMAKE_CXX_STANDARD 11)

include(FindPkgConfig)
include(GNUInstallDirs)
pkg_check_modules(CODECSERVER REQUIRED codecserver)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_executable(dmr_quadratic_residue_syndrome_generator dmr/quadratic_residue_syndrome_generator.c)
    target_link_libraries(dmr_quadratic_residue_syndrome_generator fec)
    add_executable(dmr_hamming_16_11_syndrome_generator dmr/hamming_16_11_syndrome_generator.c)
    target_link_libraries(dmr_hamming_16_11_syndrome_generator fec)
    add_executable(dmr_hamming_7_4_syndrome_generator dmr/hamming_7_4_syndrome_generator.c)
    target_link_libraries(dmr_hamming_7_4_syndrome_generator fec)
    add_executable(ysf_golay_24_12_syndrome_generator ysf/golay_24_12_syndrome_generator.c)
    target_link_libraries(ysf_golay_24_12_syndrome_generator fec)
    add_executable(dmr_golay_20_8_syndrome_generator dmr/golay_20_8_syndrome_generator.c)
    target_link_libraries(dmr_golay_20_8_syndrome_generator fec)
    add_executable(dmr_hamming_15_11_syndrome_generator dmr/hamming_15_11_syndrome_generator.c)
    target_link_libraries(dmr_hamming_15_11_syndrome_generator fec)
    add_executable(dmr_hamming_13_9_syndrome_generator dmr/hamming_13_9_syndrome_generator.c)
    target_link_libraries(dmr_hamming_13_9_syndrome_generator fec)
    add_executable(pocsag_bch_31_21_syndrome_generator pocsag/bch_31_21_syndrome_generator.c)
    target_link_libraries(pocsag_bch_31_21_syndrome_generator fec)
endif()

SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(CMAKE_C_FLAGS_RELEASE "-O3")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O3")
SET(CMAKE_C_FLAGS_DEBUG "-g -O3")

add_subdirectory(src)
