add_subdirectory(lib)
add_subdirectory(digitalvoice_filter)
add_subdirectory(dmr_decoder)
add_subdirectory(fsk_demodulator)
add_subdirectory(gfsk_demodulator)
add_subdirectory(mbe_synthesizer)
add_subdirectory(pocsag_decoder)
add_subdirectory(rrc_filter)
add_subdirectory(ysf_decoder)
add_subdirectory(dc_block)