add_library(digiham_digitalvoice_filter OBJECT digitalvoice_filter.cpp)
target_compile_options(digiham_digitalvoice_filter PRIVATE "-fPIC")

add_executable(digitalvoice_filter digitalvoice_filter_cli.cpp)
target_link_libraries(digitalvoice_filter digiham)
install(TARGETS digitalvoice_filter DESTINATION ${CMAKE_INSTALL_BINDIR})